# bro_tcplog_plugin

./: CMakeLists.txt  README.md  build.sh  parse_profile.sh
scripts/: init.bro
scripts/PS/: README
scripts/PS/tcplog/: __load__.bro
src/: Plugin.cc  Plugin.h  TcpLog.cc  TcpLog.h  TcpSession.h  tcplog.bif
tests/: btest.cfg
tests/tcplog/: show-plugin.bro
